--- a/src/styles/components/progress.scss
+++ b/src/styles/components/progress.scss
@@ -24,7 +24,7 @@
             position: absolute;
             bottom: 0;
             z-index: 1;
-            height: 40px;
+            height: 10px;
             display: flex;
 
             &::-webkit-slider-runnable-track {
